# flashplot

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
examples/: examples.py
src/: fast_plot.py
src/flashplot/: flashplot.py
