[project]
name = "flashplot"
version = "0.0.5"
dependencies = [
  "numpy",
  "matplotlib",
  "pillow",
  "tqdm>=4.67.1"
]

requires-python = ">= 3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
docs = [
  "sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2"
]